🐛 Fix #16 Form Blocking Bttm Msgs
- The form at the bttm of the pg needs to be fixed if there is no scrolling on the pg.

- If there is scrolling on the pg, though, the bottom msgs used to be unreadable (as they were blocked by the form's "fixed" positioning). No more, now all msgs are fully readable!

-Also ft. button Nav now has a white bg so it's easier to discern from the msg box.

--- a/public/main.css
+++ b/public/main.css
@@ -13,6 +13,7 @@ nav {
     justify-content: space-around;
     position: -webkit-sticky;
     position: sticky;
+    background-color: #fff;
     top: 0;
     width: 100%;   
 }
